Bug 125002 - [Styles] Tab stop settings get mixed up during editting them
Summary: [Styles] Tab stop settings get mixed up during editting them
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.2.3.2 release
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:6.3.0 target:6.2.4
Keywords:
Depends on:
Blocks: GTK3
  Show dependency treegraph
 
Reported: 2019-04-27 16:17 UTC by Martin Sourada
Modified: 2019-07-23 08:29 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Short video showing the bug (304.52 KB, video/webm)
2019-04-27 16:27 UTC, Martin Sourada
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Martin Sourada 2019-04-27 16:17:41 UTC
Description:
Tabs stops settings get all confused or even lost during editing them in paragraph style.

Steps to Reproduce:
1. Prepare text with three tabs
2. Add three tabs stops with different settings in the used paragraph style
3. Press OK
4. Enter the paragraph style settings again
5. Switch to and fro between different positions in the Tabs tab
6. Press OK

Actual Results:
Tab stops settings get all mixed up

Expected Results:
Tab stops settings do not change


Reproducible: Always


User Profile Reset: No



Additional Info:
I am not able to reproduce in 6.1.5.2 so it seems to be a regression.

Version: 6.2.3.2
Build ID: aecc05fe267cc68dde00352a451aa867b3b546ac
CPU threads: 2; OS: Linux 5.0; UI render: default; VCL: gtk3; 
Locale: en-US (C); UI-Language: en-US
Calc: threaded
Comment 1 Martin Sourada 2019-04-27 16:27:57 UTC
Created attachment 151042 [details]
Short video showing the bug

I created a short screencast where the problem is shown.
I also noticed the bug is in GTK3 plugin, GTK2 works correctly.
Comment 2 Dieter 2019-04-28 10:53:51 UTC
I can't confirm this with

Version: 6.2.3.2 (x64)
Build-ID: aecc05fe267cc68dde00352a451aa867b3b546ac
CPU-Threads: 4; BS: Windows 10.0; UI-Render: GL; VCL: win; 
Gebietsschema: de-DE (de_DE); UI-Sprache: de-DE
Calc: threaded
Comment 3 Caolán McNamara 2019-04-28 15:40:54 UTC
odd, very odd
Comment 4 Commit Notification 2019-04-28 20:31:50 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/7d69b4da74a6e826357392ade2fc3175d3092f87%5E%21

Resolves: tdf#125002 toggling on radio button generates click on another

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Caolán McNamara 2019-04-28 20:36:59 UTC
fixed in master, backport for 6-2 in gerrit
Comment 6 Commit Notification 2019-04-28 21:01:41 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-6-2":

https://git.libreoffice.org/core/+/8b92cd8ff345d86e5b1cfee09e221826d135afc4%5E%21

Resolves: tdf#125002 toggling on radio button generates click on another

It will be available in 6.2.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Dieter 2019-07-23 08:29:05 UTC
Verified with

Version: 6.4.0.0.alpha0+ (x64)
Build ID: 8f98a7c4e5b1f0b249c026577805a378b8a533d5
CPU threads: 4; OS: Windows 10.0; UI render: GL; VCL: win; 
TinderBox: Win-x86_64@42, Branch:master, Time: 2019-07-23_00:30:19
Locale: de-DE (de_DE); UI-Language: en-US
Calc: threaded

Caolán, thanks for fixing it.