Resolves: tdf#125002 toggling on radio button generates click on another

so use toggle and ignore toggle offs

Change-Id: Id6a9f3a7a9cf02d62ede00e4c246629406f9a64b
Reviewed-on: https://gerrit.libreoffice.org/71482
Tested-by: Jenkins
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>