cui/source/inc/tabstpge.hxx
@@ -133,8 +133,8 @@ private:
     DECL_LINK(DelHdl_Impl, weld::Button&, void);
     DECL_LINK(DelAllHdl_Impl, weld::Button&, void);
 
-    DECL_LINK(FillTypeCheckHdl_Impl, weld::Button&, void);
-    DECL_LINK(TabTypeCheckHdl_Impl, weld::Button&, void);
+    DECL_LINK(FillTypeCheckHdl_Impl, weld::ToggleButton&, void);
+    DECL_LINK(TabTypeCheckHdl_Impl, weld::ToggleButton&, void);
 
     DECL_LINK(SelectHdl_Impl, weld::TreeView&, void);
     DECL_LINK(ModifyHdl_Impl, weld::ComboBox&, void);
